Update deployement
Signed-off-by: Simon Misencik <simon.misencik@gmail.com>